# allanit-infra

./: .gitignore  Makefile  changelog.md  notes.md  todo.md
allanit-dashboard/: .env.example  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yaml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
allanit-dashboard/migration/: API.md  FUNCTIONALITIES.md  INDEX.md  MARKETING.md  README.md  SWITCH.md  TECHNICAL.md
allanit-dashboard/src/: App.vue  config.ts  main.ts  style.css
allanit-dashboard/src/api/: apiClient.ts  campaigns.ts  contacts.ts  http.ts  journals.ts  machineJournals.ts  machines.ts  mockClient.ts  notes.ts  segments.ts
allanit-dashboard/src/components/: Shell.vue
allanit-dashboard/src/mock/: campaign_sends.ts  campaigns.ts  contacts.ts  customers.ts  employees.ts  invoices.ts  journals.ts  logs.ts  machineFaultReports.ts  machineJournals.ts  machines.ts  mail_templates.ts  notes.ts  orderComments.ts  purchase_orders.ts  segments.ts  sent_emails.ts  subsidiaries.ts  sync_history.ts
allanit-infra/: .gitignore  Makefile  docker-compose.yml  readme.md
allanit-infra/allanit_infra/: Cargo.toml  dockerfile
allanit-infra/allanit_infra/common/: Cargo.toml  diesel.toml
allanit-infra/allanit_infra/common/src/: auth.rs  commands.rs  lib.rs
allanit-infra/allanit_infra/common/src/database/: mod.rs  schema.rs
allanit-infra/allanit_infra/common/src/database/models/: customer.rs  email_inbound.rs  invoice_raw.rs  log.rs  mod.rs  purchase_order.rs  user.rs
allanit-infra/allanit_infra/common/src/database/repositories/: customer_repo.rs  email_inbound_repo.rs  invoice_raw_repo.rs  log.rs  mod.rs  purchase_order_repo.rs  user.rs
allanit-infra/allanit_infra/common/src/enums/: email_status.rs  invoice_status.rs  log.rs  mod.rs  system.rs
allanit-infra/allanit_infra/core/: Cargo.toml  Rocket.toml  diesel.toml
allanit-infra/allanit_infra/core/src/: main.rs
allanit-infra/allanit_infra/core/src/core/: bootstrap.rs  mod.rs  pulse_broadcaster.rs  service_initializer.rs  shared_resources.rs
allanit-infra/allanit_infra/core/src/modules/: command_bus.rs  db_writer.rs  dead_letter_worker.rs  health_and_metrics.rs  ingestor_router.rs  logger.rs  mod.rs  module_channels.rs  module_initializer.rs  seventime_fetcher.rs
allanit-infra/allanit_infra/core/src/modules/rocket_api/: rocket_server.rs
allanit-infra/allanit_infra/core/src/modules/rocket_api/routes/: authorization.rs  user.rs
allanit-infra/allanit_infra/core/src/rocket_api/: mod.rs  rocket_server.rs
allanit-infra/allanit_infra/core/src/rocket_api/routes/: authorization.rs  mod.rs  user.rs
allanit-infra/allanit_infra/core/src/services/: mod.rs  module_channels.rs  service_channels.rs  service_initializer.rs
allanit-infra/allanit_infra/core/src/utils/: parsing.rs
allanit-infra/allanit_infra/core/tests/: authorization.rs  user.rs
allanit-infra/allanit_infra/core/tests/common_test/: mod.rs
allanit-infra/allanit_infra/docs/core/services/: service_channels.md
allanit-infra/allanit_infra/migrations/2025-04-14-155632_Users_Domain/: up.sql
allanit-infra/allanit_infra/migrations/2025-10-06-173055-0000_create_logs/: down.sql  up.sql
allanit-infra/allanit_infra/migrations/2025-10-07-132118-0000_init_core/: down.sql  up.sql
allanit-infra/allanit_infra/ndjson/: allanit.ndjson
allanit-infra/docs/: Style_guide.md
seventimes-mock/: docker-compose.yml  readme
seventimes-mock/database/: migrate.sql  seed.sql
seventimes-mock/scripts/: test.sh
(+41 files in other folders)
