[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
# ----- CLI / TUI stacks -------------------------
clap            = { version = "4.4", features = ["derive"] }
crossterm       = "0.26"
ratatui         = "0.23"
dialoguer       = "0.11"
petgraph        = "0.6"

tokio        = { workspace = true }
futures      = { workspace = true }
diesel       = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["postgres"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
chrono       = { workspace = true, features = ["serde"] }
uuid         = { workspace = true, features = ["v4"] }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
rand         = { workspace = true }
argon2       = { workspace = true , default-features = false, features = ["std"] }

# ------- Rocket specific ------------
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres", "deadpool_redis"] }

